@@ -29,6 +29,8 @@ LanguageTool Change Log
      method, your language now uses SimpleSentenceTokenizer. This is a very simple
      tokenizer and you probably want to implement getSentenceTokenizer() to return
      a LocalSRXSentenceTokenizer instead that's adapted to your needs.
+    -Rule.supportsLanguage() now also works for PatternRules (i.e. rules loaded from
+     XML files). It used to always return 'false' for those rules.
     -The public field Language.DEMO has been removed. It is now only available 
      internally for tests, together with the demo language itself and DemoChunker.
     -JLanguageTool.printIfVerbose() has been changed from protected to private,
